--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,15 +25,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
             <TextView
                 android:id="@+id/article_subheading"
-                android:layout_width="match_parent"
+                android:layout_width="100sp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/article_heading"
                 android:padding="@dimen/padding_regular"
                 android:text="@string/article_subtitle"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
+                android:textSize="20sp"
+                android:textAppearance="@android:style/TextAppearance" />
             <TextView
                 android:id="@+id/article"
                 android:layout_width="wrap_content"
